# sm2m-sdmmc

./: .gitignore  BUS.md  Cargo.toml  README.md  embed.toml  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
doc/: BUS.md  FUNC.md  design.drawio
emulator/: Cargo.toml  README.md  STM32F107VCT6.ioc  embed.toml  memory.x
emulator/src/: emulator.rs  input.rs  keyboard.rs  main.rs  output.rs
firmware/: Cargo.toml  README.md  embed.toml
firmware-v2/: Cargo.toml  README.md
firmware-v2/src/: adapter.rs  error.rs  main.rs  mode.rs
firmware/.cargo/: config.toml
firmware/src/: adapter.rs  error.rs  main.rs  peripherals.rs
firmware/src/mode/: address.rs  read.rs  result.rs  write.rs
firmware/src/peripherals/: indicators.rs  mod.rs  sdmmc.rs  sm2m.rs
firmware/src/peripherals/sdmmc/: card.rs  controller.rs  file.rs
firmware/src/peripherals/sm2m/: bus.rs  gpioa.rs  gpiob.rs  gpioc.rs  gpiod.rs  gpioe.rs  input.rs  io.rs  output.rs
firmware/src/tasks/: command.rs
schematics/: STM32F103VBT6.ioc  STM32F103VBTx.ioc  connectors.kicad_sch  mcu.kicad_sch  pwr.kicad_sch  schematics.kicad_pcb  schematics.kicad_pro  schematics.kicad_sch  stm32f103vbt6.ioc
schematics-v2/: STM32F407VET6.ioc  mcu.kicad_sch  pwr.kicad_sch  schematics.ioc  schematics.kicad_pcb  schematics.kicad_pro  schematics.kicad_sch  sdmmc.kicad_sch  sm2m.kicad_sch  swd.kicad_sch  ~schematics.kicad_sch.lck
schematics/lib/: Custom.kicad_sym
src/: buffer.rs  main.rs  mode.rs  peripherals.rs  state.rs  tasks.rs  types.rs
src/mode/: address.rs  read.rs  ready.rs  write.rs
(+35 files in other folders)
