[package]
name = "sm2m-sdmmc"
version = "1.0.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.1"
cortex-m-semihosting = "0.5"
embedded-hal = "0.2"
embedded-sdmmc = "0.4"
heapless = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.6"
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f107"] }

[[bin]]
name = "sm2m-sdmmc"
test = false
bench = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
