[package]
name = "sm2m-sdmmc"
version = "1.0.0"
edition = "2021"

[dependencies]
cortex-m-rtic = "1"
embedded-alloc = "0.5"
embedded-hal = "0.2"
embedded-sdmmc = "0.4"
rtt-target = "0.4"

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dependencies.stm32f1xx-hal]
version = "0.10"
features = ["rt", "stm32f103", "medium"]

[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

[profile.release]
debug = true
lto = true
